- fix, wrong sort function - fix, clicking on the padding-left of the canvas was triggering the click event     - don't use the padding to center the canvas, use the text-align: center; on the body element instead

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body
+    {
+    text-align: center;
+    }
+
 #LoadMessage
     {
     position: fixed;
@@ -6,7 +11,6 @@
 
 #Menu, #HighScore
     {
-    text-align: center;
     margin-top: 10px;
     }
 
